// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Provider renders 1`] = `
.glamor-0 {
  font-family: -apple-system,BlinkMacSystemFont,sans-serif;
}

<div
  className="glamor-0"
/>
`;

exports[`exports a Absolute component 1`] = `
.glamor-0 {
  position: absolute;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Arrow component 1`] = `
.glamor-0 {
  display: inline-block;
  width: 0;
  height: 0;
  vertical-align: middle;
  border-right: .3125em solid transparent;
  border-left: .3125em solid transparent;
  border-top: .4375em solid;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Avatar component 1`] = `
.glamor-0 {
  display: inline-block;
  width: 48px;
  height: 48px;
  border-radius: 99999px;
}

<img
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a BackgroundImage component 1`] = `
.glamor-0 {
  width: 100%;
  background-image: none;
  background-size: cover;
  background-position: center;
  height: 0;
  padding-bottom: 75%;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Badge component 1`] = `
.glamor-0 {
  margin-left: 8px;
  margin-right: 8px;
  padding: 8px;
  font-size: 12px;
  color: white;
  background-color: blue;
  display: inline-block;
  vertical-align: middle;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Banner component 1`] = `
.glamor-0 {
  padding: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 80vh;
  background-size: cover;
  background-position: center;
  background-image: none;
}

@media screen and (min-width:40em) {
  .glamor-0 {
    padding: 64px;
  }
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a BlockLink component 1`] = `
.glamor-0 {
  display: block;
  text-decoration: none;
  color: inherit;
}

<a
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Blockquote component 1`] = `
.glamor-0 {
  margin: 0px;
  font-size: 20px;
  margin: 0px;
  font-size: 20px;
}

<blockquote
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Border component 1`] = `
.glamor-0 {
  border-style: solid;
  border-color: gray2;
  color: inherit;
  border-width: 1px;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Box component 1`] = `
.glamor-0 {
  box-sizing: border-box;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Button component 1`] = `
.glamor-0 {
  margin: 0px;
  padding-bottom: 16px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  font-size: 14px;
  color: white;
  font-family: inherit;
  line-height: 1.1428571428571428;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: blue;
}

.glamor-0:disabled {
  opacity: 0.25;
}

.glamor-0:active {
  background-color: blue;
  box-shadow: inset 0 0 8px rgba(0,0,0,0.25);
}

.glamor-0:focus {
  outline: 0;
  box-shadow: 0 0 0 2px blue;
}

.glamor-0:hover {
  box-shadow: inset 0 0 0 999px rgba(0,0,0,0.125);
}

<button
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a ButtonCircle component 1`] = `
.glamor-0 {
  margin: 0px;
  padding-bottom: 16px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  font-size: 14px;
  color: white;
  font-family: inherit;
  line-height: 1.1428571428571428;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: blue;
  padding-left: 32px;
  padding-right: 32px;
  border-radius: 99999px;
}

.glamor-0:disabled {
  opacity: 0.25;
}

.glamor-0:active {
  background-color: blue;
  box-shadow: inset 0 0 8px rgba(0,0,0,0.25);
}

.glamor-0:focus {
  outline: 0;
  box-shadow: 0 0 0 2px blue;
}

.glamor-0:hover {
  box-shadow: inset 0 0 0 999px rgba(0,0,0,0.125);
}

<button
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a ButtonOutline component 1`] = `
.glamor-0 {
  margin: 0px;
  padding-bottom: 16px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  font-size: 14px;
  color: white;
  background-color: transparent;
  font-family: inherit;
  line-height: 1.1428571428571428;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  color: blue;
  background-color: transparent;
  box-shadow: inset 0 0 0 2px;
}

.glamor-0:active {
  color: white;
  background-color: blue;
  box-shadow: inset 0 0 0 2px blue,inset 0 0 8px rgba(0,0,0,0.25);
}

.glamor-0:focus {
  box-shadow: inset 0 0 0 2px,0 0 0 2px;
}

.glamor-0:hover {
  color: white;
  background-color: blue;
}

.glamor-0:disabled {
  opacity: 0.25;
}

.glamor-0:active {
  background-color: transparent;
  box-shadow: inset 0 0 8px rgba(0,0,0,0.25);
}

.glamor-0:focus {
  outline: 0;
  box-shadow: 0 0 0 2px transparent;
}

.glamor-0:hover {
  box-shadow: inset 0 0 0 999px rgba(0,0,0,0.125);
}

<button
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a ButtonTransparent component 1`] = `
.glamor-0 {
  margin: 0px;
  padding-bottom: 16px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  font-size: 14px;
  color: white;
  background-color: transparent;
  font-family: inherit;
  line-height: 1.1428571428571428;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  color: inherit;
  background-color: transparent;
}

.glamor-0:active {
  background-color: transparent;
  box-shadow: inset 0 0 0 2px,inset 0 0 8px rgba(0,0,0,0.25);
}

.glamor-0:focus {
  box-shadow: inset 0 0 0 2px,0 0 0 2px;
}

.glamor-0:hover {
  color: blue;
  background-color: transparent;
}

.glamor-0:disabled {
  opacity: 0.25;
}

.glamor-0:active {
  background-color: transparent;
  box-shadow: inset 0 0 8px rgba(0,0,0,0.25);
}

.glamor-0:focus {
  outline: 0;
  box-shadow: 0 0 0 2px transparent;
}

.glamor-0:hover {
  box-shadow: inset 0 0 0 999px rgba(0,0,0,0.125);
}

<button
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Card component 1`] = `
.glamor-0 {
  background-color: white;
  overflow: hidden;
  box-shadow: inset 0 0 0 1px gray2,0 0 4px gray2;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Carousel component 1`] = `
.glamor-0 {
  width: 100%;
  overflow: hidden;
  white-space: nowrap;
}

.glamor-0 > div:first-child {
  margin-left: NaN%;
  -webkit-transition-property: margin;
  transition-property: margin;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a CarouselSlide component 1`] = `
.glamor-0 {
  padding: 32px;
  width: 100%;
  display: inline-block;
  vertical-align: middle;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Checkbox component 1`] = `
.glamor-0 {
  margin-right: 8px;
}

<input
  className="glamor-0"
  is={null}
  type="checkbox"
/>
`;

exports[`exports a Circle component 1`] = `
.glamor-0 {
  margin-left: 8px;
  margin-right: 8px;
  padding: 8px;
  font-size: 12px;
  color: white;
  background-color: blue;
  display: inline-block;
  vertical-align: middle;
  color: white;
  background-color: blue;
  text-align: center;
  width: 24px;
  height: 24px;
  border-radius: 99999px;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Close component 1`] = `
.glamor-0 {
  margin: 0px;
  padding: 0px;
  padding-bottom: 16px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  font-size: 14px;
  color: white;
  background-color: transparent;
  font-family: inherit;
  line-height: 1.1428571428571428;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  text-decoration: none;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  padding: 0px;
  font-size: 20px;
  color: inherit;
  background-color: transparent;
  padding: 0px;
  font-size: 20px;
  line-height: 1;
  width: 24px;
  height: 24px;
}

.glamor-0:active {
  background-color: transparent;
  box-shadow: inset 0 0 0 2px,inset 0 0 8px rgba(0,0,0,0.25);
}

.glamor-0:focus {
  box-shadow: inset 0 0 0 2px,0 0 0 2px;
}

.glamor-0:hover {
  color: blue;
  background-color: transparent;
}

.glamor-0:disabled {
  opacity: 0.25;
}

.glamor-0:active {
  background-color: transparent;
  box-shadow: inset 0 0 8px rgba(0,0,0,0.25);
}

.glamor-0:focus {
  outline: 0;
  box-shadow: 0 0 0 2px transparent;
}

.glamor-0:hover {
  box-shadow: inset 0 0 0 999px rgba(0,0,0,0.125);
}

<button
  className="glamor-0"
  is={null}
>
  ×
</button>
`;

exports[`exports a Code component 1`] = `
.glamor-0 {
  font-size: 14px;
}

<code
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Column component 1`] = `
.glamor-0 {
  box-sizing: border-box;
  margin-bottom: 64px;
  padding-left: 32px;
  padding-right: 32px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin-bottom: 64px;
  padding-left: 32px;
  padding-right: 32px;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Container component 1`] = `
.glamor-0 {
  margin-left: auto;
  margin-right: auto;
  padding-left: 32px;
  padding-right: 32px;
  max-width: 1024px;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Divider component 1`] = `
.glamor-0 {
  margin-bottom: 16px;
  margin-top: 16px;
  border: 0;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

<hr
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Donut component 1`] = `
.glamor-0 {
  color: blue;
}

<svg
  className="glamor-0"
  color="blue"
  height={128}
  strokeWidth={2}
  value={1}
  viewBox="0 0 32 32"
  width={128}
>
  <circle
    cx={16}
    cy={16}
    fill="none"
    opacity="0.125"
    r={14}
    stroke="currentcolor"
    strokeWidth={2}
  />
  <circle
    cx={16}
    cy={16}
    fill="none"
    r={14}
    stroke="currentcolor"
    strokeDasharray={87.96459430051421}
    strokeDashoffset={0}
    strokeWidth={2}
    transform="rotate(-90 16 16)"
  />
</svg>
`;

exports[`exports a DotButton component 1`] = `
.glamor-0 {
  margin: 0px;
  padding: 0;
  border-width: 4px;
  border-style: solid;
  border-color: transparent;
  background-clip: padding-box;
  border-radius: 99999px;
  background-color: rgba(0,0,0,0.25);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.glamor-0:disabled {
  opacity: 0.25;
}

.glamor-0:focus {
  background-color: blue;
}

.glamor-0:hover {
  background-color: blue;
}

<button
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Drawer component 1`] = `
.glamor-0 {
  background-color: white;
  position: fixed;
  background-color: white;
  overflow-x: hidden;
  overflow-y: auto;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Embed component 1`] = `
.glamor-0 {
  position: relative;
  height: 0;
  padding: 0;
  padding-bottom: 56.25%;
  overflow: hidden;
}

.glamor-0 > iframe {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  bottom: 0;
  left: 0;
  border: 0;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Fixed component 1`] = `
.glamor-0 {
  position: fixed;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Flex component 1`] = `
.glamor-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Group component 1`] = `
.glamor-0 > *:last-child {
  border-radius: 0 4px 4px 0;
}

.glamor-0 > *:first-child {
  border-radius: 4px 0 0 4px;
}

.glamor-0 > * {
  border-radius: 0;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Heading component 1`] = `
.glamor-0 {
  margin: 0px;
  font-size: 32px;
  margin: 0px;
  font-size: 32px;
  line-height: 1.25;
}

<h2
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Image component 1`] = `
.glamor-0 {
  display: block;
  max-width: 100%;
  height: auto;
}

<img
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Input component 1`] = `
.glamor-0 {
  margin: 0px;
  padding: 8px;
  width: 100%;
  font-size: inherit;
  color: inherit;
  background-color: transparent;
  font-family: inherit;
  line-height: inherit;
  display: inline-block;
  vertical-align: middle;
  border: 0;
  box-shadow: inset 0 0 0 1px gray2;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.glamor-0:disabled {
  opacity: 0.25;
}

.glamor-0:focus {
  outline: none;
  box-shadow: inset 0 0 0 1px blue;
}

<input
  className="glamor-0"
  is={null}
  type="text"
/>
`;

exports[`exports a Label component 1`] = `
.glamor-0 {
  margin-bottom: 8px;
  font-size: 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<label
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Lead component 1`] = `
.glamor-0 {
  margin: 0px;
  font-size: 20px;
  margin: 0px;
  font-size: 20px;
  line-height: 1.25;
}

<p
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Link component 1`] = `
.glamor-0 {
  color: blue;
}

<a
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Measure component 1`] = `
.glamor-0 {
  max-width: 32em;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Media component 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Message component 1`] = `
.glamor-0 {
  padding-bottom: 16px;
  padding-left: 32px;
  padding-right: 32px;
  padding-top: 16px;
  color: white;
  background-color: blue;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 48px;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a NavLink component 1`] = `
.glamor-0 {
  padding: 16px;
  font-size: 14px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  text-decoration: none;
  white-space: nowrap;
  color: inherit;
  background-color: transparent;
  cursor: pointer;
}

.glamor-0:disabled {
  opacity: 0.25;
}

.glamor-0:hover {
  background-color: rgba(0,0,0,0.0625);
}

<a
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Overlay component 1`] = `
.glamor-0 {
  padding: 32px;
  background-color: white;
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  max-width: 100vw;
  max-height: 100vh;
  overflow: auto;
  box-shadow: 0 0 0 60vmax rgba(0,0,0,0.5),0 0 32px rgba(0,0,0,0.25);
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Panel component 1`] = `
.glamor-0 {
  overflow: hidden;
  border-width: 1px;
  border-style: solid;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a PanelFooter component 1`] = `
.glamor-0 {
  padding: 16px;
  font-size: 14px;
  border-top-width: 1px;
  border-top-style: solid;
}

<footer
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a PanelHeader component 1`] = `
.glamor-0 {
  padding: 16px;
  font-size: 16px;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

<header
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Pre component 1`] = `
.glamor-0 {
  margin: 0px;
  font-size: 14px;
  overflow: auto;
}

<pre
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Progress component 1`] = `
.glamor-0 {
  margin: 0px;
  width: 100%;
  background-color: gray2;
  display: block;
  overflow: hidden;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.glamor-0::-moz-progress-bar {
  background-color: blue;
}

.glamor-0::-webkit-progress-value {
  background-color: blue;
}

.glamor-0::-webkit-progress-bar {
  background-color: blue;
}

<progress
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Provider component 1`] = `
.glamor-0 {
  font-family: -apple-system,BlinkMacSystemFont,sans-serif;
}

<div
  className="glamor-0"
/>
`;

exports[`exports a Radio component 1`] = `
.glamor-0 {
  margin-right: 8px;
}

<input
  className="glamor-0"
  is={null}
  type="radio"
/>
`;

exports[`exports a Relative component 1`] = `
.glamor-0 {
  position: relative;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Row component 1`] = `
.glamor-0 {
  box-sizing: border-box;
  margin-left: -32px;
  margin-right: -32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -32px;
  margin-right: -32px;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Samp component 1`] = `
.glamor-0 {
  font-size: 14px;
}

<samp
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a ScrollCarousel component 1`] = `
.glamor-0 {
  width: 100%;
  overflow: auto;
  white-space: nowrap;
  -webkit-scroll-snap-points-x: repeat(100%);
  -moz-scroll-snap-points-x: repeat(100%);
  -ms-scroll-snap-points-x: repeat(100%);
  scroll-snap-points-x: repeat(100%);
  -webkit-scroll-snap-type: mandatory;
  -moz-scroll-snap-type: mandatory;
  -ms-scroll-snap-type: mandatory;
  scroll-snap-type: mandatory;
  -webkit-scroll-snap-destination: 0% 100%;
  -moz-scroll-snap-destination: 0% 100%;
  -ms-scroll-snap-destination: 0% 100%;
  scroll-snap-destination: 0% 100%;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Select component 1`] = `
.glamor-2 {
  position: relative;
  margin: 0px;
  width: 100%;
  color: inherit;
  background-color: transparent;
  display: inline-block;
  vertical-align: middle;
}

.glamor-2 select {
  box-shadow: inset 0 0 0 1px gray2;
}

.glamor-2 select:disabled {
  opacity: 0.25;
}

.glamor-2 select:focus {
  box-shadow: inset 0 0 0 1px blue;
}

.glamor-0 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  margin: 0;
  color: inherit;
  background-color: transparent;
  border: 0;
  border-radius: 0;
  outline: none;
}

.glamor-1 {
  position: absolute;
  top: 0;
  right: 0;
  width: 8px;
  height: 8px;
  margin: 12px;
  -webkit-fill: currentcolor;
  fill: currentcolor;
}

<div
  className="glamor-2"
>
  <select
    className="glamor-0"
    color="inherit"
  />
  <svg
    className="glamor-1"
    viewBox="0 0 32 32"
  >
    <path
      d="M0 6 L32 6 L16 28 z"
    />
  </svg>
</div>
`;

exports[`exports a Slider component 1`] = `
.glamor-0 {
  margin-bottom: 16px;
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 16px;
  width: 100%;
  display: block;
  cursor: pointer;
  color: inherit;
  border-radius: 99999px;
  background-color: gray2;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.glamor-0::-webkit-slider-thumb {
  width: 16px;
  height: 16px;
  background-color: currentcolor;
  border: 0;
  border-radius: 99999px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

<input
  className="glamor-0"
  is={null}
  type="range"
/>
`;

exports[`exports a Small component 1`] = `
.glamor-0 {
  margin: 0px;
  font-size: 12px;
  font-size: 12px;
}

<small
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Star component 1`] = `
.glamor-0 {
  font-size: 20px;
  color: yellow;
  position: relative;
  width: 1em;
  height: 1em;
  color: rgba(0,0,0,0.125);
}

.glamor-0::after {
  display: none;
  content: "★";
  position: absolute;
  left: 0;
  top: 0;
  width: 1em;
  height: 1em;
  color: blue;
  clip: rect(0,.45em,1em,0);
}

<div
  className="glamor-0"
  is={null}
>
  ★
</div>
`;

exports[`exports a Sticky component 1`] = `
.glamor-0 {
  position: -webkit-sticky;
  position: -webkit-sticky;
  position: sticky;
  top: null;
  right: null;
  bottom: null;
  left: null;
  z-index: undefined;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Subhead component 1`] = `
.glamor-0 {
  margin: 0px;
  font-size: 32px;
  margin: 0px;
  font-size: 32px;
  line-height: 1.25;
  margin: 0px;
  font-size: 24px;
}

<h2
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Switch component 1`] = `
.glamor-0 {
  color: blue;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 40px;
  height: 24px;
  border-radius: 9999px;
  background-color: transparent;
  box-shadow: inset 0 0 0 2px;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.glamor-0::after {
  content: " ";
  width: 16px;
  height: 16px;
  margin: 4px;
  border-radius: 9999px;
  -webkit-transition-property: -webkit-transform,color;
  -webkit-transition-property: transform,color;
  transition-property: transform,color;
  -webkit-transition-duration: .1s;
  transition-duration: .1s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
  -webkit-transform: translateX(0);
  -ms-transform: translateX(0);
  transform: translateX(0);
  background-color: blue;
}

<div
  className="glamor-0"
  is={null}
  role="checkbox"
/>
`;

exports[`exports a TabItem component 1`] = `
.glamor-0 {
  margin-right: 32px;
  padding-bottom: 16px;
  padding-top: 16px;
  font-size: 14px;
  text-decoration: none;
  color: inherit;
  border-bottom-width: 0;
  border-bottom-style: solid;
}

.glamor-0:hover {
  color: blue;
}

<a
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Tabs component 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-color: gray2;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Text component 1`] = `
.glamor-0 {
  margin: 0px;
}

<p
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Textarea component 1`] = `
.glamor-0 {
  margin: 0px;
  padding: 8px;
  width: 100%;
  color: inherit;
  background-color: transparent;
  font-family: inherit;
  font-size: inherit;
  border: 0;
  box-shadow: inset 0 0 0 1px gray2;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.glamor-0:disabled {
  opacity: 0.25;
}

.glamor-0:focus {
  outline: none;
  box-shadow: inset 0 0 0 1px blue;
}

<textarea
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Toolbar component 1`] = `
.glamor-0 {
  padding-left: 16px;
  padding-right: 16px;
  color: white;
  background-color: gray9;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Tooltip component 1`] = `
.glamor-0 {
  color: white;
  background-color: black;
  display: inline-block;
  position: relative;
  color: inherit;
  background-color: transparent;
}

.glamor-0:hover::before,
.glamor-0:hover::after {
  display: block;
}

.glamor-0::after {
  display: none;
  position: absolute;
  bottom: 100%;
  left: 50%;
  -webkit-transform: translate(-50%,8px);
  -ms-transform: translate(-50%,8px);
  transform: translate(-50%,8px);
  content: " ";
  border-width: 6px;
  border-style: solid;
  border-color: transparent;
  border-top-color: blue;
}

.glamor-0::before {
  display: none;
  content: "undefined";
  position: absolute;
  bottom: 100%;
  left: 50%;
  -webkit-transform: translate(-50%,-4px);
  -ms-transform: translate(-50%,-4px);
  transform: translate(-50%,-4px);
  white-space: nowrap;
  color: blue;
  background-color: blue;
}

<div
  className="glamor-0"
  is={null}
/>
`;

exports[`exports a Truncate component 1`] = `
.glamor-0 {
  margin: 0px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<p
  className="glamor-0"
  is={null}
/>
`;

exports[`hoc returns a component 1`] = `
<div
  className="css-0"
  is={null}
/>
`;
